<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/title_mark"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_mark"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:hint="2012年10月11日"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mark_am"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/am"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mark_pm"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/pm"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/check_button_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_mark"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/check_group_mark"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/checkbox_yes_mark"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/checkbox_no_mark"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btn_sure"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_below="@id/check_button_mark"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/btn_commit"
        android:textSize="12sp" />

</RelativeLayout>
