<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/title_main"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/title"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/month_main"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:hint="2012.10.11"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/month_am"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textStyle="italic|bold"
            android:text="@string/am"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/month_pm"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textStyle="italic|bold"
            android:text="@string/pm"
            android:textSize="15sp" />

        <!--<Button-->
            <!--android:id="@+id/whole_month"-->
            <!--android:layout_width="95dp"-->
            <!--android:layout_height="35dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:onClick="whole"-->
            <!--android:text="@string/btn_month"-->
            <!--android:textSize="12sp"-->
            <!--android:textStyle="bold" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/checkL_main"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_main"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/check_group_main"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/checkbox_yes_main"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/checkbox_no_main"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/commit_check"
        android:layout_below="@id/checkL_main"
        android:layout_marginTop="5dp"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:onClick="commitSure"
        android:text="@string/btn_commit"
        android:textSize="12sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/commit_check"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
