<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/day"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:hint="1日"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/check_group_am"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_toEndOf="@id/day"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/whole_AorP_am"
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:text="@string/am"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/checkbox_yes_am"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/checkbox_no_am"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/no" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/check_group_pm"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_below="@id/check_group_am"
        android:layout_alignStart="@id/check_group_am"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/whole_AorP_pm"
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:text="@string/pm"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/checkbox_yes_pm"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/checkbox_no_pm"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/no" />
    </RadioGroup>

</RelativeLayout>
