<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/main_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_below="@+id/main_title"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/main_icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/main_icons"
        android:layout_below="@+id/main_time"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_below="@id/main_icons"
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/main_text"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/mark_main"
        android:layout_below="@id/main_text"
        android:layout_width="match_parent"
        android:layout_height="150dp">

    </RelativeLayout>

    <Button
        android:id="@+id/btn_mark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:onClick="btn_mark_today"
        android:text="@string/btn_mark"
        android:textSize="12sp" />

    <Button
        android:id="@+id/record_month"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:onClick="record_month"
        android:text="@string/btn_month"
        android:textSize="12sp" />

</RelativeLayout>
