<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/day_list"
        android:layout_marginTop="5dp"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:hint="1日"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/check_group_am_list"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_toEndOf="@id/day_list"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/check_am_list"
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:text="@string/am"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/checkbox_yes_am_list"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/checkbox_no_am_list"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/no" />

        <TextView
            android:id="@+id/never_mark_am_list"
            android:visibility="gone"
            android:layout_marginStart="20dp"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/never_mark"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/check_group_pm_list"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_below="@id/check_group_am_list"
        android:layout_alignStart="@id/check_group_am_list"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/check_pm_list"
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:text="@string/pm"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/checkbox_yes_pm_list"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/checkbox_no_pm_list"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/no" />

        <TextView
            android:id="@+id/never_mark_pm_list"
            android:visibility="gone"
            android:layout_marginStart="20dp"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/never_mark"/>
    </RadioGroup>

    <LinearLayout
        android:layout_toEndOf="@id/day_list"
        android:layout_marginTop="7dp"
        android:visibility="gone"
        android:id="@+id/never_mark_list"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/never_mark_text_list"
            android:layout_marginStart="58dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/never_mark"/>
        </LinearLayout>



</RelativeLayout>
